--- a/index-network.html
+++ b/index-network.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="cssreset.css" type="text/css" />
 
   <script src="me-network.js"></script>
+  <script src="me-packet.js"></script>
 </head>
 <body>
 
