--- a/index-network.html
+++ b/index-network.html
@@ -7,6 +7,7 @@
 
   <script src="me-network.js"></script>
   <script src="me-packet.js"></script>
+  <script src="package-processor.js"></script>
 </head>
 <body>
 
